# keda-issues-5274

./: Cargo.toml  Dockerfile  LICENSE  consumer.yml  kafka-persistent-single.yaml  keda_kafka_config.yaml  producer.yml
src/: consumer.rs  example_utils.rs  main.bak  main.rs  producer.rs
