[package]
name = "sample-kafka-producer-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
env_logger = "0.11.1"
log = "0.4.20"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9.99"
rdkafka = "0.36.2"
tokio = { version = "1", features = ["full"] }
